[package]
name = "local-mock-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
anyhow = "1.0.81"
serde = { versions = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[build]
exclude = ["staticData"]
